hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__struct_instantiation_with_type_parameters_reassign_invalid_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "RHS expected to be of type struct, got struct",
                span: 4:13; [71, 84],
                level: Error,
            },
        ],
        inputs: (),
    },
)
