hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__struct_invalid_field_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Invalid type for field 'x': expected number, got boolean",
                span: 1:39; [38, 44],
                level: Error,
            },
        ],
        inputs: (),
    },
)
