hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__struct_length.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Struct fields differ in length",
                span: 1:32; [31, 36],
                level: Error,
            },
        ],
        inputs: (),
    },
)
